Fix issues of fonts and general styles - Added new fonts (.ttf format) - Added general styles for scrollbars

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @font-face {
   font-family: "CircularStd";
-  src: url("/public/fonts/CircularStd-Medium.woff2") format("woff2");
+  src: url("/public/fonts/CircularStd-Medium.ttf") format("ttf");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/public/fonts/CircularStd-Book.woff2") format("woff2");
+  src: url("/public/fonts/CircularStd-Book.ttf") format("ttf");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -17,7 +17,7 @@
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/public/fonts/CircularStd-Light.woff2") format("woff2");
+  src: url("/public/fonts/CircularStd-Light.otf") format("otf");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -25,7 +25,7 @@
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/public/fonts/CircularStd-Bold.woff2") format("woff2");
+  src: url("/public/fonts/CircularStd-Bold.ttf") format("ttf");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -33,7 +33,7 @@
 
 @font-face {
   font-family: "CircularStd";
-  src: url("/public/fonts/CircularStd-Black.woff2") format("woff2");
+  src: url("/public/fonts/CircularStd-Black.ttf") format("ttf");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -44,6 +44,23 @@
     font-family: "CircularStd", system-ui, sans-serif;
     background-color: #000000;
     color: white;
+
+
+    /* width */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: #5A5A5A;
+      border-radius: 2px;
+    }
   }
 }
 
